--- a/urdu-argument.html
+++ b/urdu-argument.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="ur" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>CPC نظریہ - دلیل</title>
+  <title>دلائل: کائناتی دباؤ اور گھیراؤ</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,64 +10,46 @@
     <a href="index.html">English</a> |
     <a href="urdu.html">اردو</a> |
     <a href="arabic.html">العربية</a> |
-    <a href="argument.html">Argument</a> |
-    <a href="urdu-argument.html">دلیل (اردو)</a>
+    <a href="argument.html">Scientific Argument</a> |
+    <a href="urdu-argument.html">دلائل (اردو)</a>
   </header>
-  <main>
-    <h1>CPC نظریہ کے دلائل</h1>
-    <p>اس صفحے پر CPC نظریہ کے سائنسی دلائل درج ہیں۔</p>
-  </main>
-</body>
-  <!DOCTYPE html>
-<html lang="ur" dir="rtl">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>کائناتی دباؤ اور گھیراؤ</title>
-  <style>
-    body { font-family: 'Noto Naskh Arabic', Arial, sans-serif; background: #fdfdfd; margin: 0; direction: rtl; }
-    main { max-width: 900px; margin: auto; padding: 30px; }
-    h1, h2 { color: #2c3e50; }
-  </style>
-</head>
-<body>
-  <header style="background:#2c3e50; padding:15px; text-align:center;">
-    <a href="index.html" style="color:#fff; margin:0 10px;">English</a> |
-    <a href="urdu.html" style="color:#fff; margin:0 10px;">اردو</a> |
-    <a href="arabic.html" style="color:#fff; margin:0 10px;">العربية</a> |
-    <a href="argument.html" style="color:#fff; margin:0 10px;">Argument</a> |
-    <a href="urdu-argument.html" style="color:#fff; margin:0 10px;">دلیل (اردو)</a>
-  </header>
-  <main>
-    <h1>کائناتی دباؤ اور گھیراؤ</h1>
-    <p>کائنات چاروں طرف سے ایک جیسے دباؤ میں پھیل رہی ہے، جو کسی توازن والی بیرونی قوت کی دلیل ہے، نہ کہ صرف کششِ ثقل۔</p>
-  </main>
-</body>
-  <!DOCTYPE html>
-<html lang="ur" dir="rtl">
-<head>
-  <meta charset="UTF-8" />
-  <title>دلیل – نظریہ دباؤ</title>
-  <style>
-    body { font-family: 'Noto Naskh Arabic', Arial; background: #fdfdfd; margin: 0; direction: rtl; }
-    main { max-width: 900px; margin: auto; padding: 30px; }
-  </style>
-</head>
-<body>
-  <header style="background:#2c3e50; padding:15px; text-align:center;">
-    <a href="index.html" style="color:#fff; margin:0 10px;">English</a> |
-    <a href="urdu.html" style="color:#fff; margin:0 10px;">اردو</a> |
-    <a href="arabic.html" style="color:#fff; margin:0 10px;">العربية</a> |
-    <a href="argument.html" style="color:#fff; margin:0 10px;">Argument</a> |
-    <a href="urdu-argument.html" style="color:#fff; margin:0 10px;">دلیل (اردو)</a>
-  </header>
-  <main>
-    <h2>نظریہ دباؤ کی بنیادی دلیلیں</h2>
-    <p>کائنات کا پھیلاؤ، دباؤ اور گھیراؤ کے ساتھ مطابقت رکھتا ہے، ناکہ کششِ ثقل سے سکیڑنے کے نظریے کے ساتھ۔</p>
-  </main>
-</body>
-</html>
 
-</html>
+  <main>
+    <h1>دلائل برائے نظریہ: کائناتی دباؤ اور گھیراؤ (Cosmic Pressure and Containment)</h1>
 
+    <h2>1. کائنات کا مسلسل پھیلاؤ</h2>
+    <p>گریویٹی کے برخلاف گریویٹی کا تقاضا ہے کہ ساری چیزیں ایک دوسرے کی طرف کھنچیں، لیکن مشاہدہ یہ ہے کہ کہکشائیں مسلسل ایک دوسرے سے دُور ہو رہی ہیں۔ یہ پھیلاؤ ایک اندرونی 'Cosmic Pressure' کی علامت ہو سکتا ہے جو ہر طرف یکساں دباؤ ڈال رہا ہے۔<br><strong>مثال:</strong> Hubble’s Redshift Observation</p>
+
+    <h2>2. کائناتی توازن (Balance) کا برقرار رہنا</h2>
+    <p>اگر صرف گریویٹی کام کر رہی ہوتی تو ساری کائنات ایک مقام پر منہدم ہو جاتی۔ لیکن کائنات میں نہ صرف فاصلے قائم ہیں بلکہ اس کی شکل بھی بگڑی نہیں۔<br><strong>مثال:</strong> Spiral galaxies کی متوازن ساخت</p>
+
+    <h2>3. بلیک ہولز اور نیوٹرون اسٹارز کا استقرار</h2>
+    <p>ان اجسام میں گریویٹی اتنی شدید ہے کہ وہ سب کچھ نگل سکتے ہیں، لیکن پھر بھی وہ ایک خاص حدود میں موجود رہتے ہیں، بکھرتے نہیں۔ یہ 'Containment Force' کی موجودگی کا ثبوت ہو سکتا ہے۔</p>
+
+    <h2>4. کائناتی بیک گراؤنڈ ریڈی ایشن (CMBR) کی یکنواختی</h2>
+    <p>CMBR کی شدت تقریباً پوری کائنات میں ایک جیسی ہے، جو ظاہر کرتا ہے کہ کوئی یکساں دباؤ یا توانائی موجود ہے۔<br><strong>حوالہ:</strong> NASA’s COBE, WMAP, Planck Missions</p>
+
+    <h2>5. مادہ اور اینٹی مادہ کا عدم توازن</h2>
+    <p>بیگ بینگ کے بعد مادہ اور اینٹی مادہ برابر ہونا چاہیے تھے، لیکن مادہ غالب ہے۔ یہ بھی Cosmic Containment کی مداخلت کا نتیجہ ہو سکتا ہے۔</p>
+
+    <h2>6. کوانٹم ویکیوم پریشر</h2>
+    <p>خالی خلا بھی مکمل خالی نہیں بلکہ وہاں توانائی موجود ہے جو دباؤ پیدا کرتی ہے۔<br><strong>مثال:</strong> Casimir Effect</p>
+
+    <h2>7. گریویٹی کی خامیاں (Inconsistencies)</h2>
+    <p>گریویٹی کو ابھی تک کوانٹم لیول پر unify نہیں کیا جا سکا، ہو سکتا ہے یہ 'Cosmic Pressure' کا بڑا پیمانے پر ظہور ہو۔</p>
+
+    <h2>8. کائناتی سرحدیں (Edges of Universe)</h2>
+    <p>اگر کائنات لامحدود ہے تو پھر وہ خود سے کنٹرول میں کیسے ہے؟ یہ 'Containment Structure' یا دباؤ کی کوئی بیرونی فیلڈ تجویز کرتا ہے۔</p>
+
+    <h2>9. میکانیکی مشابہت (Architectural Analogy)</h2>
+    <p>ایک گیس والا بلبلہ جس کی سطح دباؤ کو قابو میں رکھتی ہے — اسی طرح کائنات بھی ہو سکتی ہے۔</p>
+
+    <h2>10. انسانی جسم میں Pressure Systems</h2>
+    <p>انسانی جسم میں دباؤ کے متوازن نظام موجود ہیں جیسے خون کا بہاؤ، دماغی دباؤ، وغیرہ — فطرت کے دوسرے نظام بھی دباؤ اور کنٹرول پر چلتے ہیں۔</p>
+
+    <footer>
+      <p>© 2025 عثمان مدنی — تمام حقوق محفوظ ہیں</p>
+    </footer>
+  </main>
+</body>
 </html>
