--- a/urdu.html
+++ b/urdu.html
@@ -45,4 +45,53 @@
     <p>CPC نظریہ کائنات کے ڈھانچے پر ایک متبادل، مضبوط نظریہ پیش کرتا ہے جو کائناتی دباؤ اور گھیراؤ کو بنیادی قوتیں مانتا ہے۔ یہ ایک ممکنہ کائناتی پھٹاؤ کی پیش گوئی کرتا ہے اور متعدد ایسے مظاہروں کی وضاحت کرتا ہے جنہیں روایتی طور پر صرف کشش ثقل سے جوڑا جاتا ہے۔</p>
   </main>
 </body>
+  <!DOCTYPE html>
+<html lang="ur" dir="rtl">
+<head>
+  <meta charset="UTF-8">
+  <title>کائناتی دباؤ اور گھیراؤ</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <a href="index.html">English</a> |
+    <a href="urdu.html">اردو</a> |
+    <a href="arabic.html">العربية</a> |
+    <a href="argument.html">Scientific Argument</a> |
+    <a href="urdu-argument.html">دلائل (اردو)</a>
+  </header>
+
+  <main>
+    <h1>کائناتی دباؤ اور گھیراؤ: ایک نظریاتی خاکہ</h1>
+    <p><strong>تحریر:</strong> عثمان مدنی<br>
+    <strong>ای میل:</strong> madniusman13@gmail.com<br>
+    <strong>© 2025 عثمان مدنی۔ جملہ حقوق محفوظ ہیں۔</strong></p>
+
+    <h2>خلاصہ</h2>
+    <p>یہ مقالہ کائناتی دباؤ اور گھیراؤ (CPC) نظریہ پیش کرتا ہے، جو اس خیال پر مبنی ہے کہ کائنات کا ڈھانچہ اندرونی دباؤ اور بیرونی گھیراؤ کے توازن سے قائم رہتا ہے۔ یہ نظریہ کشش ثقل کے واحد ماڈل کو چیلنج کرتے ہوئے کائناتی توسیع، کہکشاؤں کی حرکات، اور روشنی کے رویے کو دباؤ کی بنیاد پر سمجھاتا ہے۔ یہ ایک ممکنہ کائناتی پھٹاؤ کا بھی تصور پیش کرتا ہے، جس کے اثرات زمین کے سمندروں اور مادی ساخت پر شدید ہوں گے۔</p>
+
+    <h2>١. تعارف</h2>
+    <p>جدید کاسمولوجی میں کائناتی ساخت اور حرکات کو عمومی طور پر کشش ثقل کے اصولوں سے تعبیر کیا جاتا ہے جو جنرل ریلیٹیویٹی کے تحت آتے ہیں۔ تاہم، مشاہداتی حقائق جیسے کہ تیز ہوتی ہوئی توسیع، کہکشاؤں کے گردش کے نمونے، اور وسیع کائناتی ڈھانچوں کی استحکام متبادل نظریات کی ضرورت کو ظاہر کرتی ہیں۔ CPC تھیوری یہ تجویز کرتی ہے کہ کائناتی دباؤ جو بیرونی گھیراؤ کے توازن میں ہو، کائنات کے استحکام کو کنٹرول کرتا ہے اور نئے نظریاتی زاویے پیش کرتا ہے۔</p>
+
+    <h2>٢. کائناتی پھٹاؤ — ایک مفروضاتی خاتمہ</h2>
+    <p>CPC تھیوری کے مطابق، کائنات ایک محدود، غبارے جیسی ساخت رکھتی ہے جہاں اندرونی دباؤ مسلسل بڑھتا رہتا ہے۔ اگر یہ دباؤ گھیراؤ کی حد سے تجاوز کر جائے تو کائنات اچانک پھٹ سکتی ہے، جس سے ستارے، کہکشائیں، اور مادہ تباہ ہو جائیں گے۔</p>
+
+    <h2>٣. پہلا اثر — پانی کا ردعمل</h2>
+    <p>زمین کے سمندر اپنی ناقابلِ دباؤ پذیر خصوصیات اور وسیع رقبے کی وجہ سے اس دھماکے کا سب سے پہلا اور اہم اثر برداشت کریں گے۔ پانی میں پھیلنے والی جھٹکے کی لہریں تباہ کن اور تیز ہوں گی۔</p>
+
+    <h2>٤. خلائی اجسام کیوں معلق رہتے ہیں — دباؤ پر مبنی وضاحت</h2>
+    <p>روایتی نظریے کے برعکس، جس میں صرف کشش ثقل سیٹلائٹس اور آسمانی اجسام کو معلق رکھتی ہے، CPC تھیوری اس توازن کو کائناتی دباؤ کے ایک خاص توازن کے طور پر بیان کرتی ہے جو اجسام کو گرنے سے روکتا ہے۔</p>
+
+    <h2>٥. روشنی پر دباؤ — فوٹونز کا گھیراؤ میں قید ہونا</h2>
+    <p>فوٹونز کائناتی دباؤ کے تحت قید ہوتے ہیں اور اس دباؤ سے متاثر ہوتے ہیں، جس کی وجہ سے ان کی رفتار اور پھیلاؤ دباؤ پر منحصر ہوتا ہے، جو روایتی طور پر ایک مستقل سمجھا جاتا ہے۔ یہ نظریہ ریڈ شفٹ اور کششی لینزنگ جیسے مظاہر کو نئے زاویے سے سمجھاتا ہے۔</p>
+
+    <h2>٦. گفتگو</h2>
+    <p>یہ نظریہ کشش ثقل کے واحد ہونے کے تصور کو چیلنج کرتا ہے اور کائناتی توسیع، استحکام، اور روشنی کے رویے کی وضاحت پیش کرتا ہے۔ اس نظریے کی تصدیق کے لیے مزید تجرباتی اور ریاضیاتی کام کی ضرورت ہے۔</p>
+
+    <h2>٧. نتیجہ</h2>
+    <p>CPC نظریہ کائنات کے ڈھانچے پر ایک متبادل، مضبوط نظریہ پیش کرتا ہے جو کائناتی دباؤ اور گھیراؤ کو بنیادی قوتیں مانتا ہے۔ یہ ایک ممکنہ کائناتی پھٹاؤ کی پیش گوئی کرتا ہے اور متعدد ایسے مظاہروں کی وضاحت کرتا ہے جنہیں روایتی طور پر صرف کشش ثقل سے جوڑا جاتا ہے۔</p>
+  </main>
+</body>
+</html>
+
 </html>
