--- a/urdu.html
+++ b/urdu.html
@@ -92,6 +92,21 @@
     <p>CPC نظریہ کائنات کے ڈھانچے پر ایک متبادل، مضبوط نظریہ پیش کرتا ہے جو کائناتی دباؤ اور گھیراؤ کو بنیادی قوتیں مانتا ہے۔ یہ ایک ممکنہ کائناتی پھٹاؤ کی پیش گوئی کرتا ہے اور متعدد ایسے مظاہروں کی وضاحت کرتا ہے جنہیں روایتی طور پر صرف کشش ثقل سے جوڑا جاتا ہے۔</p>
   </main>
 </body>
+  <body>
+  <header>
+    <nav>
+      <a href="index.html">🏠 ہوم</a> |
+      <a href="urdu.html">اردو</a> |
+      <a href="arabic.html">العربية</a> |
+      <a href="argument.html">Scientific Argument</a> |
+      <a href="urdu-argument.html">دلائل (اردو)</a> |
+      <a href="about.html">تعارف</a>
+    </nav>
+  </header>
+  <hr>
+
+  <!-- باقی آپ کا صفحہ کا مواد یہاں شروع ہوگا -->
+
 </html>
 
 </html>
