--- a/urdu-argument.html
+++ b/urdu-argument.html
@@ -52,4 +52,19 @@
     </footer>
   </main>
 </body>
+  <body>
+  <header>
+    <nav>
+      <a href="index.html">🏠 ہوم</a> |
+      <a href="urdu.html">اردو</a> |
+      <a href="arabic.html">العربية</a> |
+      <a href="argument.html">Scientific Argument</a> |
+      <a href="urdu-argument.html">دلائل (اردو)</a> |
+      <a href="about.html">تعارف</a>
+    </nav>
+  </header>
+  <hr>
+
+  <!-- باقی آپ کا صفحہ کا مواد یہاں شروع ہوگا -->
+
 </html>
