--- a/arabic.html
+++ b/arabic.html
@@ -69,6 +69,21 @@
     <p>الكون يتمدد في جميع الاتجاهات بسرعة شبه موحدة، مما يدل على ضغط خارجي متوازن، وليس فقط الجاذبية.</p>
   </main>
 </body>
+  <body>
+  <header>
+    <nav>
+      <a href="index.html">🏠 ہوم</a> |
+      <a href="urdu.html">اردو</a> |
+      <a href="arabic.html">العربية</a> |
+      <a href="argument.html">Scientific Argument</a> |
+      <a href="urdu-argument.html">دلائل (اردو)</a> |
+      <a href="about.html">تعارف</a>
+    </nav>
+  </header>
+  <hr>
+
+  <!-- باقی آپ کا صفحہ کا مواد یہاں شروع ہوگا -->
+
 </html>
 
 </html>
