--- a/argument.html
+++ b/argument.html
@@ -42,6 +42,21 @@
     <p>The universe behaves in a way that suggests outer containment and inner pressure, not gravitational collapse.</p>
   </main>
 </body>
+  <body>
+  <header>
+    <nav>
+      <a href="index.html">🏠 ہوم</a> |
+      <a href="urdu.html">اردو</a> |
+      <a href="arabic.html">العربية</a> |
+      <a href="argument.html">Scientific Argument</a> |
+      <a href="urdu-argument.html">دلائل (اردو)</a> |
+      <a href="about.html">تعارف</a>
+    </nav>
+  </header>
+  <hr>
+
+  <!-- باقی آپ کا صفحہ کا مواد یہاں شروع ہوگا -->
+
 </html>
 
 </html>
