--- a/arabic.html
+++ b/arabic.html
@@ -1,78 +1,14 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <title>الضغط الكوني - العربية</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header>
-    <a href="index.html">English</a> |
-    <a href="urdu.html">اردو</a> |
-    <a href="arabic.html">العربية</a> |
-    <a href="argument.html">Argument</a> |
-    <a href="urdu-argument.html">دلیل (اردو)</a>
-  </header>
-  <main>
-    <h1>نظرية الضغط الكوني والاحتواء</h1>
-    <p>هذا هو النسخة العربية من النظرية الكاملة.</p>
-  </main>
-</body>
-  <!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>نظرية الضغط والاحتواء الكوني</title>
-  <style>
-    body { font-family: 'Amiri', Arial, sans-serif; background: #fdfdfd; margin: 0; direction: rtl; }
-    main { max-width: 900px; margin: auto; padding: 30px; }
-    h1, h2 { color: #2c3e50; }
-  </style>
+  <title>نظرية الضغط الكوني والاحتواء</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header style="background:#2c3e50; padding:15px; text-align:center;">
-    <a href="index.html" style="color:#fff; margin:0 10px;">English</a> |
-    <a href="urdu.html" style="color:#fff; margin:0 10px;">اردو</a> |
-    <a href="arabic.html" style="color:#fff; margin:0 10px;">العربية</a> |
-    <a href="argument.html" style="color:#fff; margin:0 10px;">Argument</a> |
-    <a href="urdu-argument.html" style="color:#fff; margin:0 10px;">دلیل (اردو)</a>
-  </header>
-  <main>
-    <h1>نظرية الضغط والاحتواء الكوني</h1>
-    <p>الكون يتمدد في جميع الاتجاهات بسرعة شبه موحدة، مما يدل على ضغط خارجي متوازن، وليس فقط الجاذبية.</p>
-  </main>
-</body>
-  <!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>نظرية الضغط والاحتواء الكوني</title>
-  <style>
-    body { font-family: 'Amiri', Arial, sans-serif; background: #fdfdfd; margin: 0; direction: rtl; }
-    main { max-width: 900px; margin: auto; padding: 30px; }
-    h1, h2 { color: #2c3e50; }
-  </style>
-</head>
-<body>
-  <header style="background:#2c3e50; padding:15px; text-align:center;">
-    <a href="index.html" style="color:#fff; margin:0 10px;">English</a> |
-    <a href="urdu.html" style="color:#fff; margin:0 10px;">اردو</a> |
-    <a href="arabic.html" style="color:#fff; margin:0 10px;">العربية</a> |
-    <a href="argument.html" style="color:#fff; margin:0 10px;">Argument</a> |
-    <a href="urdu-argument.html" style="color:#fff; margin:0 10px;">دلیل (اردو)</a>
-  </header>
-  <main>
-    <h1>نظرية الضغط والاحتواء الكوني</h1>
-    <p>الكون يتمدد في جميع الاتجاهات بسرعة شبه موحدة، مما يدل على ضغط خارجي متوازن، وليس فقط الجاذبية.</p>
-  </main>
-</body>
-  <body>
   <header>
     <nav>
-      <a href="index.html">🏠 ہوم</a> |
+      <a href="index.html">🏠 Home</a> |
       <a href="urdu.html">اردو</a> |
       <a href="arabic.html">العربية</a> |
       <a href="argument.html">Scientific Argument</a> |
@@ -82,10 +18,57 @@
   </header>
   <hr>
 
-  <!-- باقی آپ کا صفحہ کا مواد یہاں شروع ہوگا -->
+  <main>
+    <h1>نظرية الضغط الكوني والاحتواء</h1>
 
-</html>
+    <h2>١. مقدمة</h2>
+    <p>
+      تقترح هذه النظرية أن الكون لا يُدار فقط بواسطة الجاذبية، بل بواسطة توازن ديناميكي بين الضغط الكوني الداخلي وقوة الاحتواء الخارجية.
+    </p>
 
-</html>
+    <h2>٢. تمزق كوني مفترض</h2>
+    <p>
+      إذا تجاوز الضغط الداخلي طاقة الاحتواء، فقد يحدث انفجار كوني يؤدي إلى تدمير المجرات والنجوم والمادة.
+    </p>
 
+    <h2>٣. المصارف أهم المستجيبين</h2>
+    <p>
+      بسبب عدم قابلية الماء للضغط وانتشاره الواسع، ستكون محيطات الأرض أول منطقة تتأثر بشكل كارثي.
+    </p>
+
+    <h2>٤. تعليق الأجسام الفضائية</h2>
+    <p>
+      توازن الضغط والاحتواء يحافظ على استقرار مدارات الأجسام السماوية، بدلاً من الاعتماد على الجاذبية فقط.
+    </p>
+
+    <h2>٥. الضوء والضغط</h2>
+    <p>
+      سلوك الفوتونات (الانزياح الأحمر، الانحناء، السرعة) يتأثر بتدرجات الضغط وليس فقط بالجاذبية.
+    </p>
+
+    <h2>٦. المعادلات النظرية</h2>
+    <ul>
+      <li><strong>توازن الضغط والاحتواء:</strong> Pi × A = Fc × A → Pi = Fc</li>
+      <li><strong>مناطق مدارية ثابتة:</strong> Pr(r) = P₀ / (1 + k r²)، حيث dPr/dr ≈ 0</li>
+      <li><strong>معادلة الانزياح الأحمر:</strong> Δλ ∝ ∇P · d</li>
+    </ul>
+
+    <h2>٧. نقد النظريات الأخرى</h2>
+    <ul>
+      <li>النسبية العامة تنتج التفرد وتتطلب الطاقة المظلمة</li>
+      <li>الجاذبية النيوتونية لا تصمد على النطاق الكوني</li>
+      <li>نماذج الطاقة المظلمة تخضع للتكهنات</li>
+      <li>نظرية الأوتار تفتقر لإثباتات تجريبية</li>
+    </ul>
+
+    <h2>٨. الخاتمة</h2>
+    <p>
+      توفر هذه النظرية منظوراً جديداً لفهم بنية الكون من خلال الضغط والاحتواء، متجنبة الاعتماد على القوى غير المرئية.
+    </p>
+
+    <footer>
+      <p>© 2025 Usman Madni — جميع الحقوق محفوظة</p>
+    </footer>
+  </main>
+</body>
 </html>
