--- a/argument.html
+++ b/argument.html
@@ -1,51 +1,14 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>CPC Theory - Argument</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header>
-    <a href="index.html">English</a> |
-    <a href="urdu.html">اردو</a> |
-    <a href="arabic.html">العربية</a> |
-    <a href="argument.html">Argument</a> |
-    <a href="urdu-argument.html">دلیل (اردو)</a>
-  </header>
-  <main>
-    <h1>Arguments for CPC Theory</h1>
-    <p>This page outlines the scientific reasoning behind the CPC theory.</p>
-  </main>
-</body>
-  <!DOCTYPE html>
-<html lang="en">
-<head>
   <meta charset="UTF-8" />
-  <title>Argument – Cosmic Theory</title>
-  <style>
-    body { font-family: Arial; background: #fdfdfd; margin: 0; }
-    main { max-width: 900px; margin: auto; padding: 30px; }
-  </style>
+  <title>Scientific Arguments – CPC Theory</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header style="background:#2c3e50; padding:15px; text-align:center;">
-    <a href="index.html" style="color:#fff; margin:0 10px;">English</a> |
-    <a href="urdu.html" style="color:#fff; margin:0 10px;">اردو</a> |
-    <a href="arabic.html" style="color:#fff; margin:0 10px;">العربية</a> |
-    <a href="argument.html" style="color:#fff; margin:0 10px;">Argument</a> |
-    <a href="urdu-argument.html" style="color:#fff; margin:0 10px;">دلیل (اردو)</a>
-  </header>
-  <main>
-    <h2>Main Arguments of CPC Theory</h2>
-    <p>The universe behaves in a way that suggests outer containment and inner pressure, not gravitational collapse.</p>
-  </main>
-</body>
-  <body>
   <header>
     <nav>
-      <a href="index.html">🏠 ہوم</a> |
+      <a href="index.html">🏠 Home</a> |
       <a href="urdu.html">اردو</a> |
       <a href="arabic.html">العربية</a> |
       <a href="argument.html">Scientific Argument</a> |
@@ -55,8 +18,55 @@
   </header>
   <hr>
 
-  <!-- باقی آپ کا صفحہ کا مواد یہاں شروع ہوگا -->
+  <main>
+    <h1>Scientific Arguments for CPC Theory</h1>
 
-</html>
+    <ol>
+      <li>
+        <strong>Universal Expansion via Internal Pressure:</strong>
+        Galaxies are receding due to cosmic pressure, not just gravity (Hubble Redshift).
+      </li>
+      <li>
+        <strong>Structural Stability:</strong>
+        Spiral galaxies resist collapse, indicating containment pressure in effect.
+      </li>
+      <li>
+        <strong>Black Holes & Neutron Stars:</strong>
+        Extreme gravity is confined, suggesting a counteracting containment force.
+      </li>
+      <li>
+        <strong>Uniform CMBR:</strong>
+        Background radiation uniformity indicates widespread pressure equilibrium.
+      </li>
+      <li>
+        <strong>Matter-Antimatter Asymmetry:</strong>
+        Imbalance may result from containment mechanisms post-Big Bang.
+      </li>
+      <li>
+        <strong>Quantum Vacuum Pressure:</strong>
+        Casimir effect and vacuum energy imply existent pressure in “empty” space.
+      </li>
+      <li>
+        <strong>Gravity's Shortcomings:</strong>
+        Can't unify quantum-gravity or explain accelerated expansion fully.
+      </li>
+      <li>
+        <strong>Edge Constraints:</strong>
+        Cosmic containment field hypothesis explains universal boundary behavior.
+      </li>
+      <li>
+        <strong>Architectural Analogy:</strong>
+        Cosmic structure resembles tension-compression systems in engineering.
+      </li>
+      <li>
+        <strong>Biological Pressure Systems:</strong>
+        Earthly systems (blood pressure, hydrostatic pressures) mirror cosmic processes.
+      </li>
+    </ol>
 
+    <footer>
+      <p>© 2025 Usman Madni — All rights reserved</p>
+    </footer>
+  </main>
+</body>
 </html>
