--- a/arabic.html
+++ b/arabic.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <title>نظرية الضغط الكوني والاحتواء</title>
+  <title>الضغط الكوني والاحتواء – التعريف الكامل</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -21,53 +21,32 @@
   <main>
     <h1>نظرية الضغط الكوني والاحتواء</h1>
 
-    <h2>١. مقدمة</h2>
+    <h2>المقدمة</h2>
     <p>
-      تقترح هذه النظرية أن الكون لا يُدار فقط بواسطة الجاذبية، بل بواسطة توازن ديناميكي بين الضغط الكوني الداخلي وقوة الاحتواء الخارجية.
+      تقترح هذه النظرية أن هيكل الكون وسلوكه ليسا مؤثرين فقط بالجاذبية، بل بتوازن ديناميكي بين الضغط الكوني الداخلي وقوة الاحتواء الخارجية.
     </p>
 
-    <h2>٢. تمزق كوني مفترض</h2>
-    <p>
-      إذا تجاوز الضغط الداخلي طاقة الاحتواء، فقد يحدث انفجار كوني يؤدي إلى تدمير المجرات والنجوم والمادة.
-    </p>
-
-    <h2>٣. المصارف أهم المستجيبين</h2>
-    <p>
-      بسبب عدم قابلية الماء للضغط وانتشاره الواسع، ستكون محيطات الأرض أول منطقة تتأثر بشكل كارثي.
-    </p>
-
-    <h2>٤. تعليق الأجسام الفضائية</h2>
-    <p>
-      توازن الضغط والاحتواء يحافظ على استقرار مدارات الأجسام السماوية، بدلاً من الاعتماد على الجاذبية فقط.
-    </p>
-
-    <h2>٥. الضوء والضغط</h2>
-    <p>
-      سلوك الفوتونات (الانزياح الأحمر، الانحناء، السرعة) يتأثر بتدرجات الضغط وليس فقط بالجاذبية.
-    </p>
-
-    <h2>٦. المعادلات النظرية</h2>
+    <h2>النقاط الرئيسية</h2>
     <ul>
-      <li><strong>توازن الضغط والاحتواء:</strong> Pi × A = Fc × A → Pi = Fc</li>
-      <li><strong>مناطق مدارية ثابتة:</strong> Pr(r) = P₀ / (1 + k r²)، حيث dPr/dr ≈ 0</li>
-      <li><strong>معادلة الانزياح الأحمر:</strong> Δλ ∝ ∇P · d</li>
+      <li>الكون يتمدد بسبب الضغط الداخلي، وليس بسبب الجاذبية فقط.</li>
+      <li>قوة احتواء خارجية تحافظ على بنية الكون من التفكك.</li>
+      <li>تفسير ظهور الانزياح الأحمر وخلفية الموجات الميكروية بشكل مختلف.</li>
+      <li>توقع حدوث انفجار كوني في حال فشل الاحتواء.</li>
+      <li>النظرية تقدم تفسيرات دون توقع التفرد أو الطاقة المظلمة.</li>
     </ul>
 
-    <h2>٧. نقد النظريات الأخرى</h2>
-    <ul>
-      <li>النسبية العامة تنتج التفرد وتتطلب الطاقة المظلمة</li>
-      <li>الجاذبية النيوتونية لا تصمد على النطاق الكوني</li>
-      <li>نماذج الطاقة المظلمة تخضع للتكهنات</li>
-      <li>نظرية الأوتار تفتقر لإثباتات تجريبية</li>
-    </ul>
+    <h2>المعادلات النظرية</h2>
+    <p><strong>توازن الضغط:</strong> Pi × A = Fc × A → لذللك Pi = Fc</p>
+    <p><strong>المدارات المستقرة:</strong> Pr(r) = P₀ / (1 + k r²)</p>
+    <p><strong>معادلة الانزياح الأحمر:</strong> Δλ ∝ ∇P · d</p>
 
-    <h2>٨. الخاتمة</h2>
+    <h2>الخاتمة</h2>
     <p>
-      توفر هذه النظرية منظوراً جديداً لفهم بنية الكون من خلال الضغط والاحتواء، متجنبة الاعتماد على القوى غير المرئية.
+      توفر هذه النظرية إطاراً جديداً لفهم الكون من خلال الضغط والاحتواء، متجاوزة النماذج التقليدية.
     </p>
 
     <footer>
-      <p>© 2025 Usman Madni — جميع الحقوق محفوظة</p>
+      <p>© 2025 Usman Madni — جميع الحقوق محفوظة</p>
     </footer>
   </main>
 </body>
