--- a/arabic.html
+++ b/arabic.html
@@ -2,51 +2,86 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <title>الضغط الكوني والاحتواء – التعريف الكامل</title>
+  <title>الضغط الكوني والاحتواء: الإطار النظري الكامل</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <nav>
-      <a href="index.html">🏠 Home</a> |
+      <a href="index.html">🏠 الصفحة الرئيسية</a> |
       <a href="urdu.html">اردو</a> |
       <a href="arabic.html">العربية</a> |
       <a href="argument.html">Scientific Argument</a> |
       <a href="urdu-argument.html">دلائل (اردو)</a> |
-      <a href="about.html">تعارف</a>
+      <a href="about.html">حول</a>
     </nav>
   </header>
   <hr>
 
   <main>
-    <h1>نظرية الضغط الكوني والاحتواء</h1>
+    <h1>الضغط الكوني والاحتواء: إطار نظري افتراضي</h1>
+    <p><strong>الكاتب:</strong> عثمان مدنی، باحث مستقل، باكستان</p>
+    <p><strong>البريد الإلكتروني:</strong> madniusman13@gmail.com</p>
 
-    <h2>المقدمة</h2>
+    <h2>الملخص</h2>
     <p>
-      تقترح هذه النظرية أن هيكل الكون وسلوكه ليسا مؤثرين فقط بالجاذبية، بل بتوازن ديناميكي بين الضغط الكوني الداخلي وقوة الاحتواء الخارجية.
+      يقدم هذا البحث نظرية الضغط الكوني والاحتواء (CPC) كنموذج مفاهيمي يقترح أن الكون يحافظ على بنيته من خلال توازن بين الضغط الداخلي الكوني ومجال احتواء خارجي. تتحدى هذه النظرية النموذج التقليدي المعتمد فقط على الجاذبية، وتفسر التوسع الكوني، وديناميكيات المجرات، وسلوك الفوتونات بناءً على تأثيرات الضغط.
     </p>
 
-    <h2>النقاط الرئيسية</h2>
+    <h2>١. المقدمة</h2>
+    <p>
+      تعتمد الكوزمولوجيا الحديثة في الغالب على قوى الجاذبية لتفسير بنية الكون وحركته، كما في النسبية العامة. ولكن الظواهر المرصودة مثل التوسع المتسارع واستقرار الهياكل الكونية الضخمة تشير إلى الحاجة لنماذج بديلة. تقترح نظرية CPC أن التوازن بين الضغط الداخلي الكوني والاحتواء الخارجي هو ما ينظم استقرار الكون.
+    </p>
+
+    <h2>٢. التمزق الكوني — نهاية افتراضية للكون</h2>
+    <p>
+      إذا تجاوز الضغط الداخلي قدرة الاحتواء، فقد يحدث تمزق مفاجئ يؤدي إلى تشتت النجوم والمجرات وانهيار المادة.
+    </p>
+
+    <h2>٣. التأثير الأول — تفاعل المحيطات</h2>
+    <p>
+      بسبب طبيعتها غير القابلة للانضغاط، ستكون المحيطات أول من يتأثر بهذا الانفجار الكوني، حيث تنتشر موجة الصدمة بسرعة وتسبب دمارًا هائلًا.
+    </p>
+
+    <h2>٤. الأجسام المعلقة في الفضاء — تفسير قائم على الضغط</h2>
+    <p>
+      لا تبقى الأجسام في الفضاء معلقة فقط بسبب الجاذبية، بل نتيجة لتوازن الضغط الكوني الذي يمنعها من السقوط أو الهروب.
+    </p>
+
+    <h2>٥. الضوء تحت الضغط — الفوتونات في الغلاف الكوني</h2>
+    <p>
+      تتأثر الفوتونات بالضغط الكوني، مما يجعل سرعتها ومسارها غير ثابتين، خلافاً لما يُفترض تقليدياً. تفسر هذه النظرية الانزياح الأحمر وعدسات الجاذبية بطرق جديدة.
+    </p>
+
+    <h2>٦. المعادلات النظرية</h2>
     <ul>
-      <li>الكون يتمدد بسبب الضغط الداخلي، وليس بسبب الجاذبية فقط.</li>
-      <li>قوة احتواء خارجية تحافظ على بنية الكون من التفكك.</li>
-      <li>تفسير ظهور الانزياح الأحمر وخلفية الموجات الميكروية بشكل مختلف.</li>
-      <li>توقع حدوث انفجار كوني في حال فشل الاحتواء.</li>
-      <li>النظرية تقدم تفسيرات دون توقع التفرد أو الطاقة المظلمة.</li>
+      <li><strong>توازن الضغط والاحتواء:</strong> Pi × A = Fc × A ⇒ Pi = Fc</li>
+      <li><strong>مناطق الضغط المداري:</strong> Pr(r) = P₀ / (1 + k r²)</li>
+      <li><strong>معادلة الانزياح الأحمر:</strong> Δλ ∝ ∇P · d</li>
     </ul>
 
-    <h2>المعادلات النظرية</h2>
-    <p><strong>توازن الضغط:</strong> Pi × A = Fc × A → لذللك Pi = Fc</p>
-    <p><strong>المدارات المستقرة:</strong> Pr(r) = P₀ / (1 + k r²)</p>
-    <p><strong>معادلة الانزياح الأحمر:</strong> Δλ ∝ ∇P · d</p>
+    <h2>٧. نقد النظريات السائدة</h2>
+    <ul>
+      <li><strong>النسبية العامة:</strong> لا تفسر التوسع المتسارع بدون طاقة مظلمة، وتفترض التفردات.</li>
+      <li><strong>جاذبية نيوتن:</strong> لا تعمل على المقاييس الكونية، وتتجاهل تأثيرات الضغط.</li>
+      <li><strong>الطاقة المظلمة والنماذج التضخمية:</strong> تعتمد على كيانات غير مرئية وغير مثبتة.</li>
+      <li><strong>نظرية الأوتار / الجاذبية الكمومية:</strong> معقدة وتفتقر للأدلة التجريبية.</li>
+    </ul>
 
-    <h2>الخاتمة</h2>
+    <h2>٨. مزايا نظرية CPC</h2>
+    <ul>
+      <li>تشرح التوسع دون الحاجة لطاقة مظلمة.</li>
+      <li>لا تتطلب تفردات أو لانهائيات.</li>
+      <li>تستخدم أمثلة واقعية من المعمار وديناميكا السوائل.</li>
+    </ul>
+
+    <h2>٩. الخاتمة</h2>
     <p>
-      توفر هذه النظرية إطاراً جديداً لفهم الكون من خلال الضغط والاحتواء، متجاوزة النماذج التقليدية.
+      تقدم نظرية الضغط الكوني والاحتواء إطارًا بديلاً لفهم بنية الكون وحركته، وتُعد قوة ضغط واحتواء أساسيتين. كما تتنبأ بتمزق كوني كارثي إذا فشل الاحتواء.
     </p>
 
     <footer>
-      <p>© 2025 Usman Madni — جميع الحقوق محفوظة</p>
+      <p>© 2025 عثمان مدني — جميع الحقوق محفوظة</p>
     </footer>
   </main>
 </body>
