--- a/arabic.html
+++ b/arabic.html
@@ -33,34 +33,48 @@
       تعتمد الكوزمولوجيا الحديثة في الغالب على قوى الجاذبية لتفسير بنية الكون وحركته، كما في النسبية العامة. ولكن الظواهر المرصودة مثل التوسع المتسارع واستقرار الهياكل الكونية الضخمة تشير إلى الحاجة لنماذج بديلة. تقترح نظرية CPC أن التوازن بين الضغط الداخلي الكوني والاحتواء الخارجي هو ما ينظم استقرار الكون.
     </p>
 
-    <h2>٢. التمزق الكوني — نهاية افتراضية للكون</h2>
+    <h2>٢. عشر حجج علمية تدعم نظرية CPC</h2>
+    <ol>
+      <li><strong>تمدد الكون المستمر:</strong> بعكس الجاذبية التي تفترض تقارب الكتل، تشير الملاحظات إلى أن المجرات تتباعد باستمرار، مما يدل على ضغط داخلي يدفعها.</li>
+      <li><strong>توازن الكون:</strong> لو كانت الجاذبية وحدها تعمل، لانكمش الكون، لكن التوازن القائم يدل على قوة احتواء تحافظ على الشكل الكوني.</li>
+      <li><strong>استقرار الثقوب السوداء والنجوم النيوترونية:</strong> على الرغم من قوة الجاذبية العالية، تبقى هذه الأجسام في حدود ثابتة، مما يشير إلى قوة احتواء إضافية.</li>
+      <li><strong>تجانس إشعاع الخلفية الكونية:</strong> يشير إلى وجود ضغط أو طاقة منتظمة في كل أنحاء الكون (مثال: مهمات COBE وPlanck).</li>
+      <li><strong>عدم توازن المادة والمادة المضادة:</strong> بعد الانفجار العظيم، لم تتساوى الكميتان، مما يشير إلى تدخل عامل احتواء كوني.</li>
+      <li><strong>ضغط الفراغ الكمومي:</strong> حتى الفراغ يحتوي طاقة تؤدي إلى ضغط (مثال: تأثير كازيمير).</li>
+      <li><strong>عيوب نظرية الجاذبية:</strong> فشل في التوحيد مع ميكانيكا الكم، وقد يكون الضغط الكوني هو البديل الأفضل.</li>
+      <li><strong>حدود الكون:</strong> إذا كان الكون محدودًا أو محاطًا، فإن هذا يشير إلى بنية احتواء خارجية.</li>
+      <li><strong>التشبيه المعماري:</strong> كما تُبنى القباب والفقاعات بتوازن الضغط، كذلك الكون قد يعمل على أساس مشابه.</li>
+      <li><strong>أنظمة الضغط في الجسم البشري:</strong> وجود توازن الضغط في الدورة الدموية والدماغ يشير إلى أن الطبيعة تعمل بنفس النظام في مقاييس كونية.</li>
+    </ol>
+
+    <h2>٣. التمزق الكوني — نهاية افتراضية للكون</h2>
     <p>
       إذا تجاوز الضغط الداخلي قدرة الاحتواء، فقد يحدث تمزق مفاجئ يؤدي إلى تشتت النجوم والمجرات وانهيار المادة.
     </p>
 
-    <h2>٣. التأثير الأول — تفاعل المحيطات</h2>
+    <h2>٤. التأثير الأول — تفاعل المحيطات</h2>
     <p>
       بسبب طبيعتها غير القابلة للانضغاط، ستكون المحيطات أول من يتأثر بهذا الانفجار الكوني، حيث تنتشر موجة الصدمة بسرعة وتسبب دمارًا هائلًا.
     </p>
 
-    <h2>٤. الأجسام المعلقة في الفضاء — تفسير قائم على الضغط</h2>
+    <h2>٥. الأجسام المعلقة في الفضاء — تفسير قائم على الضغط</h2>
     <p>
       لا تبقى الأجسام في الفضاء معلقة فقط بسبب الجاذبية، بل نتيجة لتوازن الضغط الكوني الذي يمنعها من السقوط أو الهروب.
     </p>
 
-    <h2>٥. الضوء تحت الضغط — الفوتونات في الغلاف الكوني</h2>
+    <h2>٦. الضوء تحت الضغط — الفوتونات في الغلاف الكوني</h2>
     <p>
       تتأثر الفوتونات بالضغط الكوني، مما يجعل سرعتها ومسارها غير ثابتين، خلافاً لما يُفترض تقليدياً. تفسر هذه النظرية الانزياح الأحمر وعدسات الجاذبية بطرق جديدة.
     </p>
 
-    <h2>٦. المعادلات النظرية</h2>
+    <h2>٧. المعادلات النظرية</h2>
     <ul>
       <li><strong>توازن الضغط والاحتواء:</strong> Pi × A = Fc × A ⇒ Pi = Fc</li>
       <li><strong>مناطق الضغط المداري:</strong> Pr(r) = P₀ / (1 + k r²)</li>
       <li><strong>معادلة الانزياح الأحمر:</strong> Δλ ∝ ∇P · d</li>
     </ul>
 
-    <h2>٧. نقد النظريات السائدة</h2>
+    <h2>٨. نقد النظريات السائدة</h2>
     <ul>
       <li><strong>النسبية العامة:</strong> لا تفسر التوسع المتسارع بدون طاقة مظلمة، وتفترض التفردات.</li>
       <li><strong>جاذبية نيوتن:</strong> لا تعمل على المقاييس الكونية، وتتجاهل تأثيرات الضغط.</li>
@@ -68,14 +82,14 @@
       <li><strong>نظرية الأوتار / الجاذبية الكمومية:</strong> معقدة وتفتقر للأدلة التجريبية.</li>
     </ul>
 
-    <h2>٨. مزايا نظرية CPC</h2>
+    <h2>٩. مزايا نظرية CPC</h2>
     <ul>
       <li>تشرح التوسع دون الحاجة لطاقة مظلمة.</li>
       <li>لا تتطلب تفردات أو لانهائيات.</li>
       <li>تستخدم أمثلة واقعية من المعمار وديناميكا السوائل.</li>
     </ul>
 
-    <h2>٩. الخاتمة</h2>
+    <h2>١٠. الخاتمة</h2>
     <p>
       تقدم نظرية الضغط الكوني والاحتواء إطارًا بديلاً لفهم بنية الكون وحركته، وتُعد قوة ضغط واحتواء أساسيتين. كما تتنبأ بتمزق كوني كارثي إذا فشل الاحتواء.
     </p>
