--- a/arabic.html
+++ b/arabic.html
@@ -1,98 +1,109 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <title>الضغط الكوني والاحتواء: الإطار النظري الكامل</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>الضغط الكوني والاحتواء: إطار فرضي</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <nav>
-      <a href="index.html">🏠 الصفحة الرئيسية</a> |
-      <a href="urdu.html">اردو</a> |
+      <a href="index.html">🏠 الرئيسية</a> |
+      <a href="urdu.html">الأردية</a> |
       <a href="arabic.html">العربية</a> |
       <a href="argument.html">Scientific Argument</a> |
-      <a href="urdu-argument.html">دلائل (اردو)</a> |
+      <a href="urdu-argument.html">دلائل</a> |
       <a href="about.html">حول</a>
     </nav>
   </header>
   <hr>
 
   <main>
-    <h1>الضغط الكوني والاحتواء: إطار نظري افتراضي</h1>
-    <p><strong>الكاتب:</strong> عثمان مدنی، باحث مستقل، باكستان</p>
+    <h1>الضغط الكوني والاحتواء: إطار فرضي</h1>
+    <p><strong>الكاتب:</strong> عثمان مدني، باحث مستقل، باكستان</p>
     <p><strong>البريد الإلكتروني:</strong> madniusman13@gmail.com</p>
 
     <h2>الملخص</h2>
     <p>
-      يقدم هذا البحث نظرية الضغط الكوني والاحتواء (CPC) كنموذج مفاهيمي يقترح أن الكون يحافظ على بنيته من خلال توازن بين الضغط الداخلي الكوني ومجال احتواء خارجي. تتحدى هذه النظرية النموذج التقليدي المعتمد فقط على الجاذبية، وتفسر التوسع الكوني، وديناميكيات المجرات، وسلوك الفوتونات بناءً على تأثيرات الضغط.
+      يقدم هذا البحث نظرية الضغط الكوني والاحتواء (CPC)، وهي نموذج تصوري يقترح أن هيكل الكون يحافظ على توازنه من خلال توازن بين الضغط الكوني الداخلي ومجال الاحتواء الخارجي. تتحدى هذه النظرية النموذج التقليدي المعتمد فقط على الجاذبية من خلال تفسير التوسع الكوني، وديناميكيات المجرات، وسلوك الفوتونات بناءً على تأثيرات الضغط.
     </p>
 
     <h2>١. المقدمة</h2>
     <p>
-      تعتمد الكوزمولوجيا الحديثة في الغالب على قوى الجاذبية لتفسير بنية الكون وحركته، كما في النسبية العامة. ولكن الظواهر المرصودة مثل التوسع المتسارع واستقرار الهياكل الكونية الضخمة تشير إلى الحاجة لنماذج بديلة. تقترح نظرية CPC أن التوازن بين الضغط الداخلي الكوني والاحتواء الخارجي هو ما ينظم استقرار الكون.
+      تعزو الكوزمولوجيا الحديثة هيكل الكون وديناميكيته بشكل رئيسي إلى قوى الجاذبية كما وصفتها النسبية العامة. ومع ذلك، فإن الظواهر الرصدية مثل التوسع المتسارع، ومنحنيات دوران المجرات، واستقرار الهياكل الكونية الهائلة، تحفز الحاجة إلى نماذج بديلة. تقترح نظرية CPC أن الضغط الداخلي المتوازن بالاحتواء الخارجي هو المسؤول عن استقرار الكون.
     </p>
 
-    <h2>٢. عشر حجج علمية تدعم نظرية CPC</h2>
+    <h2>٢. عشرة أدلة علمية لدعم النظرية</h2>
     <ol>
-      <li><strong>تمدد الكون المستمر:</strong> بعكس الجاذبية التي تفترض تقارب الكتل، تشير الملاحظات إلى أن المجرات تتباعد باستمرار، مما يدل على ضغط داخلي يدفعها.</li>
-      <li><strong>توازن الكون:</strong> لو كانت الجاذبية وحدها تعمل، لانكمش الكون، لكن التوازن القائم يدل على قوة احتواء تحافظ على الشكل الكوني.</li>
-      <li><strong>استقرار الثقوب السوداء والنجوم النيوترونية:</strong> على الرغم من قوة الجاذبية العالية، تبقى هذه الأجسام في حدود ثابتة، مما يشير إلى قوة احتواء إضافية.</li>
-      <li><strong>تجانس إشعاع الخلفية الكونية:</strong> يشير إلى وجود ضغط أو طاقة منتظمة في كل أنحاء الكون (مثال: مهمات COBE وPlanck).</li>
-      <li><strong>عدم توازن المادة والمادة المضادة:</strong> بعد الانفجار العظيم، لم تتساوى الكميتان، مما يشير إلى تدخل عامل احتواء كوني.</li>
-      <li><strong>ضغط الفراغ الكمومي:</strong> حتى الفراغ يحتوي طاقة تؤدي إلى ضغط (مثال: تأثير كازيمير).</li>
-      <li><strong>عيوب نظرية الجاذبية:</strong> فشل في التوحيد مع ميكانيكا الكم، وقد يكون الضغط الكوني هو البديل الأفضل.</li>
-      <li><strong>حدود الكون:</strong> إذا كان الكون محدودًا أو محاطًا، فإن هذا يشير إلى بنية احتواء خارجية.</li>
-      <li><strong>التشبيه المعماري:</strong> كما تُبنى القباب والفقاعات بتوازن الضغط، كذلك الكون قد يعمل على أساس مشابه.</li>
-      <li><strong>أنظمة الضغط في الجسم البشري:</strong> وجود توازن الضغط في الدورة الدموية والدماغ يشير إلى أن الطبيعة تعمل بنفس النظام في مقاييس كونية.</li>
+      <li>التمدد المستمر للكون</li>
+      <li>الحفاظ على التوازن البنيوي للكون</li>
+      <li>ثبات الثقوب السوداء والنجوم النيوترونية</li>
+      <li>انتظام إشعاع الخلفية الكونية</li>
+      <li>عدم التوازن بين المادة والمادة المضادة</li>
+      <li>ضغط الفراغ الكمومي</li>
+      <li>نواقص نظرية الجاذبية</li>
+      <li>حدود الكون</li>
+      <li>التشابه المعماري الميكانيكي</li>
+      <li>أنظمة الضغط في جسم الإنسان</li>
     </ol>
 
-    <h2>٣. التمزق الكوني — نهاية افتراضية للكون</h2>
+    <h2>٣. التمزق الكوني — نهاية فرضية للكون</h2>
     <p>
-      إذا تجاوز الضغط الداخلي قدرة الاحتواء، فقد يحدث تمزق مفاجئ يؤدي إلى تشتت النجوم والمجرات وانهيار المادة.
+      وفقًا لنظرية CPC، يشبه الكون نظامًا محدودًا يشبه البالون حيث يتزايد الضغط الداخلي باستمرار. إذا تجاوز هذا الضغط قدرة الاحتواء، فقد يحدث تمزق مفاجئ يؤدي إلى تفكك كارثي للنجوم والمجرات.
     </p>
 
-    <h2>٤. التأثير الأول — تفاعل المحيطات</h2>
+    <h2>٤. أول أثر — استجابة المحيطات</h2>
     <p>
-      بسبب طبيعتها غير القابلة للانضغاط، ستكون المحيطات أول من يتأثر بهذا الانفجار الكوني، حيث تنتشر موجة الصدمة بسرعة وتسبب دمارًا هائلًا.
+      ستكون محيطات الأرض أول من يستجيب بسبب طبيعتها غير القابلة للضغط. ستنتشر موجات الصدمة عبر الماء بسرعة ودمار كبير.
     </p>
 
-    <h2>٥. الأجسام المعلقة في الفضاء — تفسير قائم على الضغط</h2>
+    <h2>٥. لماذا تبقى الأجسام الفضائية معلقة؟ — تفسير قائم على الضغط</h2>
     <p>
-      لا تبقى الأجسام في الفضاء معلقة فقط بسبب الجاذبية، بل نتيجة لتوازن الضغط الكوني الذي يمنعها من السقوط أو الهروب.
+      بخلاف النموذج التقليدي حيث تعلق الأجسام بواسطة الجاذبية فقط، تشرح نظرية CPC هذا التوازن على أنه ناتج عن ضغط كوني متوازن داخل الغلاف الكوني.
     </p>
 
-    <h2>٦. الضوء تحت الضغط — الفوتونات في الغلاف الكوني</h2>
+    <h2>٦. الضوء تحت الضغط — احتواء الفوتونات</h2>
     <p>
-      تتأثر الفوتونات بالضغط الكوني، مما يجعل سرعتها ومسارها غير ثابتين، خلافاً لما يُفترض تقليدياً. تفسر هذه النظرية الانزياح الأحمر وعدسات الجاذبية بطرق جديدة.
+      الفوتونات محاطة ومقيدة بالضغط الكوني، مما يجعل سرعتها وانتشارها معتمدًا على الضغط بدلاً من الثبات العالمي. وهذا يفسر ظواهر مثل الانزياح نحو الأحمر وعدسات الجاذبية.
     </p>
 
     <h2>٧. المعادلات النظرية</h2>
     <ul>
-      <li><strong>توازن الضغط والاحتواء:</strong> Pi × A = Fc × A ⇒ Pi = Fc</li>
-      <li><strong>مناطق الضغط المداري:</strong> Pr(r) = P₀ / (1 + k r²)</li>
-      <li><strong>معادلة الانزياح الأحمر:</strong> Δλ ∝ ∇P · d</li>
+      <li><strong>التوازن:</strong> Pi × A = Fc × A ⇒ Pi = Fc</li>
+      <li><strong>منطقة ضغط مدارية:</strong> Pr(r) = P₀ / (1 + k r²)</li>
+      <li><strong>الانزياح الأحمر:</strong> Δλ ∝ ∇P · d</li>
     </ul>
 
-    <h2>٨. نقد النظريات السائدة</h2>
+    <h2>٨. نقاط ضعف النظريات التقليدية</h2>
     <ul>
-      <li><strong>النسبية العامة:</strong> لا تفسر التوسع المتسارع بدون طاقة مظلمة، وتفترض التفردات.</li>
-      <li><strong>جاذبية نيوتن:</strong> لا تعمل على المقاييس الكونية، وتتجاهل تأثيرات الضغط.</li>
-      <li><strong>الطاقة المظلمة والنماذج التضخمية:</strong> تعتمد على كيانات غير مرئية وغير مثبتة.</li>
-      <li><strong>نظرية الأوتار / الجاذبية الكمومية:</strong> معقدة وتفتقر للأدلة التجريبية.</li>
+      <li><strong>النسبية العامة:</strong> لا تفسر التوسع المتسارع بدون الطاقة المظلمة وتفترض التفردات.</li>
+      <li><strong>جاذبية نيوتن:</strong> غير كافية على المقاييس الكونية وتتجاهل الضغط.</li>
+      <li><strong>نماذج الطاقة المظلمة والتضخم:</strong> تعتمد على كيانات غير مرئية.</li>
+      <li><strong>نظرية الأوتار / الجاذبية الكمومية:</strong> معقدة وتفتقر إلى الأدلة التجريبية.</li>
     </ul>
 
     <h2>٩. مزايا نظرية CPC</h2>
     <ul>
-      <li>تشرح التوسع دون الحاجة لطاقة مظلمة.</li>
-      <li>لا تتطلب تفردات أو لانهائيات.</li>
-      <li>تستخدم أمثلة واقعية من المعمار وديناميكا السوائل.</li>
+      <li>تفسر التوسع دون الحاجة للطاقة المظلمة.</li>
+      <li>لا تفترض تفردات.</li>
+      <li>تستخدم تشبيهات من العمارة والديناميكا المائية.</li>
     </ul>
 
     <h2>١٠. الخاتمة</h2>
     <p>
-      تقدم نظرية الضغط الكوني والاحتواء إطارًا بديلاً لفهم بنية الكون وحركته، وتُعد قوة ضغط واحتواء أساسيتين. كما تتنبأ بتمزق كوني كارثي إذا فشل الاحتواء.
+      تقدم نظرية الضغط الكوني والاحتواء نموذجًا بديلاً لفهم هيكل الكون، حيث تضع الضغط والاحتواء كقوى أساسية. كما تتنبأ بتمزق كوني محتمل وتفسر ظواهر كونية متعددة خارج نطاق الجاذبية التقليدي.
     </p>
+
+    <h2>١١. المراجع</h2>
+    <ol>
+      <li>Misner, C. W., Thorne, K. S., & Wheeler, J. A. (1973). <em>Gravitation</em>. W. H. Freeman and Company.</li>
+      <li>Padmanabhan, T. (1993). <em>Structure Formation in the Universe</em>. Cambridge University Press.</li>
+      <li>Peebles, P. J. E. (1993). <em>Principles of Physical Cosmology</em>. Princeton University Press.</li>
+      <li>Riess, A. G., et al. (1998). Observational Evidence from Supernovae for an Accelerating Universe and a Cosmological Constant. <em>The Astronomical Journal, 116(3), 1009–1038</em>.</li>
+      <li>Verlinde, E. (2017). Emergent Gravity and the Dark Universe. <em>SciPost Physics, 2(3), 016</em>.</li>
+      <li>Zee, A. (2010). <em>Quantum Field Theory in a Nutshell</em> (2nd ed.). Princeton University Press.</li>
+      <li>Weinberg, S. (1972). <em>Gravitation and Cosmology: Principles and Applications of the General Theory of Relativity</em>. Wiley.</li>
+    </ol>
 
     <footer>
       <p>© 2025 عثمان مدني — جميع الحقوق محفوظة</p>
