--- a/arabic.html
+++ b/arabic.html
@@ -33,18 +33,18 @@
       تعزو الكوزمولوجيا الحديثة هيكل الكون وديناميكيته بشكل رئيسي إلى قوى الجاذبية كما وصفتها النسبية العامة. ومع ذلك، فإن الظواهر الرصدية مثل التوسع المتسارع، ومنحنيات دوران المجرات، واستقرار الهياكل الكونية الهائلة، تحفز الحاجة إلى نماذج بديلة. تقترح نظرية CPC أن الضغط الداخلي المتوازن بالاحتواء الخارجي هو المسؤول عن استقرار الكون.
     </p>
 
-    <h2>٢. عشرة أدلة علمية لدعم النظرية</h2>
+    <h2>٢. عشرة دلائل علمية تفصيلية لدعم النظرية</h2>
     <ol>
-      <li>التمدد المستمر للكون</li>
-      <li>الحفاظ على التوازن البنيوي للكون</li>
-      <li>ثبات الثقوب السوداء والنجوم النيوترونية</li>
-      <li>انتظام إشعاع الخلفية الكونية</li>
-      <li>عدم التوازن بين المادة والمادة المضادة</li>
-      <li>ضغط الفراغ الكمومي</li>
-      <li>نواقص نظرية الجاذبية</li>
-      <li>حدود الكون</li>
-      <li>التشابه المعماري الميكانيكي</li>
-      <li>أنظمة الضغط في جسم الإنسان</li>
+      <li><strong>التمدد المستمر للكون:</strong> إذا كانت الجاذبية هي القوة الوحيدة، فستنجذب الكتل نحو بعضها، لكن الكون يتوسع بشكل متسارع. هذا يشير إلى وجود ضغط داخلي يدفع الكون إلى الخارج مثل بالون يتمدد.</li>
+      <li><strong>الحفاظ على توازن بنية الكون:</strong> رغم الجاذبية، لم تنهار المجرات أو الكواكب، مما يدل على توازن قوى، إحداها يمكن أن تكون قوة ضغط داخلية.</li>
+      <li><strong>ثبات الثقوب السوداء والنجوم النيوترونية:</strong> هذه الأجسام شديدة الجاذبية لكنها لا تنهار على نفسها فورًا، مما يشير إلى وجود ضغط احتوائي مقاوم.</li>
+      <li><strong>انتظام إشعاع الخلفية الكونية (CMBR):</strong> الاتساق في شدة الإشعاع الخلفي يعكس توازن ضغط موحد في جميع الاتجاهات.</li>
+      <li><strong>عدم التوازن بين المادة والمادة المضادة:</strong> بعد الانفجار العظيم، كان يجب أن تتساوى المادة والمادة المضادة، لكن غلبة المادة توحي بتدخل قوة احتوائية في التكوين الكوني.</li>
+      <li><strong>ضغط الفراغ الكمومي:</strong> حتى الفراغ يحتوي على طاقة تنتج ضغطًا قابلاً للقياس، كما يظهر في تأثير كازيمير.</li>
+      <li><strong>نواقص نظرية الجاذبية:</strong> لم يتم توحيد الجاذبية مع ميكانيكا الكم، ما قد يشير إلى أن ما نراه كجاذبية هو مظهر كبير النطاق للضغط الكوني.</li>
+      <li><strong>حدود الكون:</strong> إذا كان الكون محدودًا، فكيف يحافظ على توازنه دون أن ينهار؟ يشير ذلك إلى وجود مجال احتواء خارجي يوازن الضغط الداخلي.</li>
+      <li><strong>تشبيه معماري ميكانيكي:</strong> يشبه الكون فقاعة غازية، حيث يحافظ سطحها على الضغط الداخلي، كما تفعل الهياكل الهندسية في البناء.</li>
+      <li><strong>أنظمة الضغط في الجسم البشري:</strong> مثل الدورة الدموية وضغط الدماغ، تدل على أن الأنظمة الطبيعية تعمل تحت توازن ضغط، ويمكن أن ينطبق ذلك على الكون بأكمله.</li>
     </ol>
 
     <h2>٣. التمزق الكوني — نهاية فرضية للكون</h2>
